# flexIRF

./: .clang-format  CMakeLists.txt
exec/: IRFsimpleWriteIrf.cc  IRFsimpleWriteIrfSerialization.cc  IRFsimpleWriteParamIrf.cc
